manifests/tenants/mosaic/shared/network-policy/egress-to-grpc-gateway.yaml
---
# Cloudflare Tunnel
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-cloudflare-tunnel-to-grpc-gateway-access
  namespace: cloudflare-tunnel-mosaic
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosaic-grpc-gateway
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
