manifests/tenants/mosaic/shared/network-policy/ingress-from-world.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-cloudflare-tunnel-from-world-access
  namespace: cloudflare-tunnel-mosaic
spec:
  endpointSelector: {}
  ingress:
    # Allow traffic from the Internet
    - fromEntities:
        - world
